<resources>
    <string name="app_name">LMSTest</string>
    <string name="action_settings">Settings</string>

    <!--Login Screen-->
    <string name="welcome_to_the_learning">Welcome to the Learning Management System</string>
    <string name="please_log_in_to_continue">Please log in to continue</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="user_name_hint"><i>Username</i></string>
    <string name="password_hint"><i>Password</i></string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log In</string>
    <string name="username_is_required" translatable="true">Username is required.</string>
    <string name="password_is_required" translatable="true">Password is required.</string>

    <!--Students List Screen-->
    <string name="user_list">User List</string>
    <string name="log_out">Log Out</string>
    <string name="next">Next>></string>
    <string name="default_group">Default Group</string>

    <!--General String-->
    <string name="ok">OK</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>


</resources>
