<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_screen"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_logo"
            android:src="@drawable/ic_logo"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_container_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_16dp"
            android:layout_marginTop="@dimen/gap_24dp"
            android:layout_marginEnd="@dimen/gap_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView">

            <TextView
                android:id="@+id/textView"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/welcome_to_the_learning"
                android:textSize="@dimen/ts_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/welcome_to_the_learning"
                android:textSize="@dimen/ts_12sp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/gap_16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/gap_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_container_title">

            <CheckBox
                android:id="@+id/cbRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_16dp"
                android:button="@drawable/check_box_selector"
                android:checked="@{safeUnbox(viewModel.isRememberMe)}"
                app:layout_constraintEnd_toEndOf="@+id/appCompatImageView2"
                app:layout_constraintStart_toStartOf="@+id/appCompatImageView2"
                app:layout_constraintTop_toBottomOf="@+id/ed_password" />

            <EditText
                android:id="@+id/ed_password"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_filed"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_filed_selector"
                android:hint="@string/password_hint"
                android:paddingStart="@dimen/gap_60dp"
                android:paddingEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_user_name" />

            <EditText
                android:id="@+id/ed_user_name"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_filed"
                android:background="@drawable/edit_filed_selector"
                android:hint="@string/user_name_hint"
                android:paddingStart="@dimen/gap_60dp"
                android:paddingEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_12dp"
                android:text="@string/remember_me"
                android:textSize="@dimen/ts_12sp"
                app:layout_constraintBottom_toBottomOf="@+id/cbRemember"
                app:layout_constraintStart_toEndOf="@+id/cbRemember"
                app:layout_constraintTop_toTopOf="@+id/cbRemember" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_12dp"
                android:src="@{safeUnbox(viewModel.isSelectNameField) ? @drawable/ic_user_select : @drawable/ic_user, default=@drawable/ic_user}"
                app:layout_constraintBottom_toBottomOf="@+id/ed_user_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ed_user_name" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@{safeUnbox(viewModel.isSelectPasswordField) ? @drawable/ic_password_select : @drawable/ic_password, default=@drawable/ic_password}"
                app:layout_constraintBottom_toBottomOf="@+id/ed_password"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/ed_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/gap_70dp"
            android:layout_gravity="end|bottom"
            android:layout_marginStart="@dimen/gap_16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/gap_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <com.dd.ShadowLayout
                android:id="@+id/shadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:sl_cornerRadius="@dimen/radius_bg_login_button"
                app:sl_dx="0dp"
                app:sl_dy="0dp"
                app:sl_shadowColor="@color/colorAccent"
                app:sl_shadowRadius="8dp">

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_login_button"
                    android:fontFamily="@font/open_sans"
                    android:onClick="@{() -> viewModel.clickLogIn()}"
                    android:paddingStart="@dimen/gap_24dp"
                    android:paddingEnd="0dp"
                    android:text="@string/log_in"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/text_login_button"
                    android:textSize="@dimen/ts_16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.dd.ShadowLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="viewModel"
            type="com.lmstest.ui.login.LoginVM" />
    </data>

</layout>